for loop of html collection to match data-date

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
   <h1>Something here!</h1>
 
-  <div class="grid-item" data-date="2015-11-23">
+  <div class="grid-item" id="day" data-date="2015-11-23">
   </div>
-  <div class="grid-item" data-date="2015-11-24">
+  <div class="grid-item" id="day" data-date="2015-11-24">
   </div>
-  <div class="grid-item" data-date="2015-11-25">
+  <div class="grid-item" id="day" data-date="2015-11-25">
   </div>
-  <div class="grid-item" data-date="2015-11-26">
+  <div class="grid-item" id="day" data-date="2015-11-26">
   </div>
-  <div class="grid-item" data-date="2019-11-27">
+  <div class="grid-item" id="day" data-date="2019-11-27">
   </div>
-  <div class="grid-item" data-date="2020-10-25">
+  <div class="grid-item" id="day" data-date="2020-10-25">
     <h4>today</h4>
   </div>
-  <div class="grid-item" data-date="2021-12-29">
+  <div class="grid-item" id="day" data-date="2021-12-29">
   </div>
 
 
