cleanup in code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <h1>Something here!</h1>
 
   <div class="grid-item" id="day" data-date="2015-11-23">
+    <div>
+      <h1><a href="">LINK</a></h1>
+    </div>
+    
   </div>
   <div class="grid-item" id="day" data-date="2015-11-24">
   </div>
@@ -29,6 +33,5 @@
 
   
 </body>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 <script src="./index.js"></script>
 </html>
