add css and js for not active class

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <h1>Something here!</h1>
 
   <div class="grid-item" id="day" data-date="2015-11-23">
-    <div>
-      <h1><a href="">LINK</a></h1>
+    <div class="grid-card">
+      <a href="./" class="not-active">Open</a>
     </div>
     
   </div>
@@ -24,10 +24,11 @@
   </div>
   <div class="grid-item" id="day" data-date="2019-11-27">
   </div>
-  <div class="grid-item" id="day" data-date="2020-10-25">
-    <h4>today</h4>
+  <div class="grid-item" id="day" data-date="2020-10-26">
+    <h2>today</h2>
   </div>
   <div class="grid-item" id="day" data-date="2021-12-29">
+    <h2>future</h2>
   </div>
 
 
