--- a/index.html
+++ b/index.html
@@ -12,27 +12,23 @@
 
   <div class="grid-item" id="day" data-date="2015-11-23">
     <div class="grid-card">
-      <a href="./" class="not-active">Open</a>
+      <h2>PAST</h2>
+      <a href="https://" >Open</a>
     </div>
     
-  </div>
-  <div class="grid-item" id="day" data-date="2015-11-24">
-  </div>
-  <div class="grid-item" id="day" data-date="2015-11-25">
-  </div>
-  <div class="grid-item" id="day" data-date="2015-11-26">
   </div>
   <div class="grid-item" id="day" data-date="2019-11-27">
   </div>
   <div class="grid-item" id="day" data-date="2020-10-26">
-    <h2>today</h2>
+    <h2>TODAY</h2>
+    <a href="https://" >Open</a>
   </div>
   <div class="grid-item" id="day" data-date="2021-12-29">
     <h2>future</h2>
+    <a href="https://" >Open</a>
   </div>
 
 
-  
 </body>
 <script src="./index.js"></script>
 </html>
