change link on object

--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Something here!</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Julkalender</h1>
 
-  <div class="grid-item" id="day" data-date="2015-11-23">
-    <div class="grid-card">
-      <h2>PAST</h2>
-      <a href="https://" >Open</a>
+    <div class="grid-item" id="day" data-date="2015-11-23">
+      <div class="grid-card">
+        <h2>PAST</h2>
+        <a href="https://">Open</a>
+      </div>
     </div>
-    
-  </div>
-  <div class="grid-item" id="day" data-date="2019-11-27">
-  </div>
-  <div class="grid-item" id="day" data-date="2020-10-26">
-    <h2>TODAY</h2>
-    <a href="https://" >Open</a>
-  </div>
-  <div class="grid-item" id="day" data-date="2021-12-29">
-    <h2>future</h2>
-    <a href="https://" >Open</a>
-  </div>
-
-
-</body>
-<script src="./index.js"></script>
+    <div class="grid-item" id="day" data-date="2019-11-27"></div>
+    <div class="grid-item" id="day" data-date="2020-11-17">
+      <h2>TODAY</h2>
+      <a href="https://www.youtube.com/watch?v=z9CEIcmWmtA"
+        >Öppna dagens lucka</a
+      >
+    </div>
+    <div class="grid-item" id="day" data-date="2021-12-29">
+      <h2>future</h2>
+      <a href="https://">Open</a>
+    </div>
+  </body>
+  <script src="./index.js"></script>
 </html>
